<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/rediobutton_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radiobutton_leo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LeoS" />

        <RadioButton
            android:id="@+id/radiobutton_raph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RaphS" />

        <RadioButton
            android:id="@+id/radiobutton_mikey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MikeyS" />

        <RadioButton
            android:id="@+id/radiobutton_don"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DonS" />

    </RadioGroup>

    <ImageButton
        android:id="@+id/turtles_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/turtles_image"/>
    <TextView
        android:id="@+id/textview_nameshow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>